--- a/backend-nest/package.json
+++ b/backend-nest/package.json
@@ -26,7 +26,9 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@songkeys/nestjs-redis": "^11.0.0",
     "class-transformer": "^0.5.1",
+    "ioredis": "^5.9.3",
     "pg": "^8.18.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
